src/tests/WallstopStudios.NovaSharp.Interpreter.Tests/LuaFixtures/SyntaxErrorExceptionTUnitTests/RethrowWrapsExceptionWhenGlobalOptionEnabled.lua
-- @lua-versions: 5.1+
-- @novasharp-only: false
-- @expects-error: true
-- @source: src/tests/WallstopStudios.NovaSharp.Interpreter.Tests.TUnit/Units/Errors/SyntaxErrorExceptionTUnitTests.cs:29
-- @test: SyntaxErrorExceptionTUnitTests.RethrowWrapsExceptionWhenGlobalOptionEnabled
function broken(
